force-app/main/default/staticresources/python/Disappear/src/objects/ProdStudy__c.object
<CustomObject>
    <fields>
        <fullName>Prod_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amgen Product</label>
        <referenceTo>AmgenProduct__c</referenceTo>
        <relationshipName>Product_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study/Project</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Product Studies/Projects</relationshipLabel>
        <relationshipName>ProductStudy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Study/Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Study_id__c</columns>
        <columns>Prod_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductStudy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Studies/Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>